--- a/psychophysics-demos/drifting-gabor.html
+++ b/psychophysics-demos/drifting-gabor.html
@@ -18,7 +18,7 @@
         }
     })
 
-    const pixi_flag = jsPsych.data.getURLVariable('pixi_flag') === '1' ? true : false;
+    const pixi_flag = true
 
     const instruction = {
         type: jsPsychHtmlButtonResponse,
