--- a/psychophysics-demos/remain_canvas.html
+++ b/psychophysics-demos/remain_canvas.html
@@ -9,8 +9,8 @@
 </head>
 <body></body>
 <script>
-    // This file demonstrates how to remain the main canvas even after the trial finishes.
-    // This method will be useful when there is a flash between trials.
+    // *** BE CAREFULL! ***
+    // This program does not function properly in PIXI mode. It remains in an incomplete state."
     
     const jsPsych = initJsPsych({
         on_finish: function() {
