--- a/psychophysics-demos/combination_with_survey_plugins.html
+++ b/psychophysics-demos/combination_with_survey_plugins.html
@@ -54,7 +54,9 @@
     // The images and locations are randomized among trials.
     const image1 = {
         obj_type: 'image',
-        file: jsPsych.timelineVariable('first_image'),
+        file: () => {
+          return jsPsych.evaluateTimelineVariable('first_image')
+        },
         show_start_time: 500, // ms after the start of the trial
         show_end_time: 1000,
         startX: jsPsych.timelineVariable('first_image_position'),
@@ -63,7 +65,9 @@
 
     const image2 =  {
         obj_type: 'image',
-        file: jsPsych.timelineVariable('second_image'),
+        file: () => {
+          return jsPsych.evaluateTimelineVariable('second_image')
+        },
         show_start_time: 1000, // ms after the start of the trial
         show_end_time: 1500,
         startX: jsPsych.timelineVariable('second_image_position'),
