--- a/psychophysics-demos/how_to_timeline_variables.html
+++ b/psychophysics-demos/how_to_timeline_variables.html
@@ -45,14 +45,18 @@
 
     const image1 = {
         obj_type: 'image',
-        file: jsPsych.timelineVariable('firstImage'),
+        file: function(){
+            return jsPsych.evaluateTimelineVariable('firstImage')
+        },
         show_start_time: 500, // ms after the start of the trial
         startX: 300,
     }
 
     const image2 =  {
         obj_type: 'image',
-        file: jsPsych.timelineVariable('secondImage'),
+        file: function(){
+            return jsPsych.evaluateTimelineVariable('secondImage')
+        },
         show_start_time: 1000, // ms after the start of the trial
         startX: 600
     }
