--- a/psychophysics-demos/keyboard_event.html
+++ b/psychophysics-demos/keyboard_event.html
@@ -64,12 +64,12 @@
               const col = current_color.toString(16); // Decimal to Hexadecimal
               const col_16 = col.length === 1 ? `0${col}`: col;
               const col_RGB = `0x${col_16}${col_16}${col_16}`;
-              const graphics = jsPsych.getCurrentTrial().stim_array[0].pixi_obj;
+              const graphics = jsPsych.getCurrentTrial().stimuli[0].instance.pixi_obj;
               graphics.beginFill(col_RGB, 1);
               graphics.drawCircle(0, 0, radius);
               graphics.endFill();
             } else {
-              jsPsych.getCurrentTrial().stim_array[0].fill_color = `rgb(${current_color}, ${current_color}, ${current_color})`;
+              jsPsych.getCurrentTrial().stimuli[0].instance.fill_color = `rgb(${current_color}, ${current_color}, ${current_color})`;
             }
           },
       }
