--- a/psychophysics-demos/mouse_drawing.html
+++ b/psychophysics-demos/mouse_drawing.html
@@ -49,7 +49,11 @@
       }
 
       
-      function drawLine(context, x1, y1, x2, y2) {
+      function drawLine(x1, y1, x2, y2) {
+        const canvas = document.getElementById("myCanvas");
+        const context = canvas.getContext("2d");
+        const centerX = canvas.width / 2 / window.devicePixelRatio;
+        const centerY = canvas.height / 2 / window.devicePixelRatio;
         context.beginPath();
         context.strokeStyle = 'black';
         context.lineWidth = 1;
@@ -82,15 +86,14 @@
           },
           mouse_move_func: function(e){
               if (isDrawing === true) {
-                  const context = jsPsych.getCurrentTrial().context;
-                  drawLine(context, x, y, e.offsetX, e.offsetY);
+                  drawLine(x, y, e.offsetX, e.offsetY);
                   x = e.offsetX;
                   y = e.offsetY;
               }
           },
           mouse_up_func: function(e){
               if (isDrawing === true) {
-                  drawLine(jsPsych.getCurrentTrial().context, x, y, e.offsetX, e.offsetY);
+                  drawLine(x, y, e.offsetX, e.offsetY);
                   x = 0;
                   y = 0;
                   isDrawing = false;
