--- a/psychophysics-demos/response_start_time_depends_on_onsets.html
+++ b/psychophysics-demos/response_start_time_depends_on_onsets.html
@@ -49,12 +49,18 @@
             {
                 type: jsPsychPsychophysics,
                 pixi: pixi_flag,
-                response_start_time: jsPsych.timelineVariable('start_time'),
+                response_start_time: function(){
+                    return jsPsych.evaluateTimelineVariable('start_time')
+                },
                 stimuli: [
                     {
                         obj_type: 'image',
-                        file: jsPsych.timelineVariable('stim'),
-                        show_start_time: jsPsych.timelineVariable('start_time'), // ms after the start of the trial
+                        file: function(){ // This works fine.
+                            return jsPsych.evaluateTimelineVariable('stim')
+                        },
+                        show_start_time: function(){ // This is called only at once... Bug?
+                            return jsPsych.evaluateTimelineVariable('start_time') // ms after the start of the trial
+                        }
                     }
                 ],
                 canvas_height: 500,
